project_ws/src/telerobot_controller/log/build_2025-09-06_13-31-03/telerobot_controller/stderr.log
  File "/media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/src/telerobot_controller/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/distance_messurement.py", line 4
    from sensor_msgs.msg import 
                                ^
SyntaxError: invalid syntax

